# internal/models/user.go
@@ -1,7 +1,6 @@
-package userService
+package models
 
 import (
-	"awesomeProject/internal/models"
 	"time"
 
 	"gorm.io/gorm"
@@ -10,10 +9,9 @@ import (
 type User struct {
 	gorm.Model
 	ID        uint           `json:"id" gorm:"primaryKey"`
-	Username  string         `json:"username"`
 	Email     string         `json:"email"`
 	Password  string         `json:"password"`
-	Tasks     []models.Task  `json:"tasks" gorm:"foreignKey:UserID"`
+	Tasks     []Task         `json:"tasks" gorm:"foreignKey:UserID"`
 	DeletedAt gorm.DeletedAt `gorm:"index"`
 	CreatedAt time.Time      `gorm:"autoCreateTime"`
 	UpdatedAt time.Time      `gorm:"autoUpdateTime"`
