# openapi/openapi.yaml
@@ -8,6 +8,13 @@ paths:
       summary: Get all tasks
       tags:
         - tasks
+      parameters:
+        - name: user_id
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: uint
       responses:
         '200':
           description: A list of tasks
@@ -147,10 +154,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+  /users/{id}/tasks:
+    get:
+      summary: Get all tasks for a specific user
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: A list of user's tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 components:
   schemas:
     Task:
       type: object
+      required:
+        - task
+        - is_done
+        - user_id
       properties:
         id:
           type: integer
@@ -159,6 +191,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
     User:
       type: object
       properties:
@@ -169,4 +204,6 @@ components:
           type: string
           format: email
         password:
+          type: string
+        username:
           type: string
